--- a/styles.css
+++ b/styles.css
@@ -30,9 +30,17 @@ html {
 .title {
     font-size: x-large;
     border-radius: 5px;
+    font-weight: bold;
     padding: 15px;
     margin: 15px;
     background-color: aliceblue;
+    font-family: "Open Sans", sans-serif;
+    letter-spacing: 2px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #000;
+    border-style:solid;
+    border-width: 2px;
 }
 
 .buttons {
